--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>calculator using javascript -Easy Tutorials</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 	<Div class="container">
